--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">simpleTracker</string>
 
-    <string name="item_footer">Next Load</string>
+    <string name="item_footer">Next Blocks</string>
+
+    <string name="title_txHash">txHash</string>
+    <string name="title_from">from</string>
+    <string name="title_to">to</string>
 </resources>
